--- a/docs/tool/en/2a.md
+++ b/docs/tool/en/2a.md
@@ -2,7 +2,7 @@
 
 
 ::: tip  
-100词，10分，通常是信或通知
+100词，10分，通常是信或通知，注意通知的格式
 
 第一段一句或两句，写给熟人先寒暄后说目的，陌生人先自我介绍后说目的
 
@@ -29,10 +29,10 @@
 
 ![](../../public/img/2019a.png)
 
-1. It is great to receive your invitation to plan a debate on the theme of city traffic. I am writing to share my ideas about the topic and relevant arrangements.
-2. I deem that it is advisable to choose this topic: Private Cars -- to Encourage or to Limited? There are two reasons. Firstly, in recent years, cities in China have been featured by the rapid economic development, which enabled more families to have additional money to purchase cars. Admittedly, cars bring us great convenience and help us to enjoy more comfortable. However, it is also cars that cause the roads to be congested.
-3. I suggest that this debate should be held in the Center of Student Activities from 18:00 to 20:00 on December 12, if you have any better suggestion, please feel free to inform me.
 
+1. I am quite delighted to receive your invitation to plan a debate on the theme of city traffic. Today, I am writing to share my ideas about the topic and relevant arrangements.
+2. I deem that it is advisable to choose this topic: Private Cars -- to Encourage or to Limited? For one thing, in recent years, cities in China have been featured by the rapid economic development, which enabled more families to have additional money to purchase cars. For another, cars bring us great convenience and help us to enjoy more comfortable. However, it is also cars that cause the roads to be congested.
+3. I suggest that this debate should be held in the Center of Student Activities from 18:00 to 20:00 on December 12, if you have any better suggestion, please feel free to inform me.
 
 
 
@@ -41,25 +41,70 @@
 ![](../../public/img/2018a.png)
 
 1. I am quite grateful for your invitation to talk about my paper. Anyway, I have to cancel my plan and so I am writing for the purpose of apologizing and specifying the reason.
-2. Several days ago, I did plan to go, but you know I was extremely busy during the past six months because I focused all my eyesight on the preparation for the national entrance examination for postgraduates. Unfortunately, owing my carelessness, I did not notice that the date for the test is just the day I planned to visit you until this moment. Accordingly, I have no option but cancel the plan.
+2. Several days ago, I did plan to go, but you know I was extremely busy during the past six months because I focused all my eyesight on the preparation for the national entrance examination for postgraduates. Unfortunately, due to my carelessness, I did not notice that the date for the test is just the day I planned to visit you until this moment. Accordingly, I have no option but cancel the plan.
 3. I sincerely hope that you can forgive me and I shall visit you after the examination at your convenience.
+
 
 
 
 ## 2017
 
+![](../../public/img/2017a.png)
+
+
 
 ## 2016
 
+![](../../public/img/2016a.png)
+
+1. So delighted to receive your congratulations and thank you very much. Today, I am writing to share my experience in learning translation.
+2. Provided that you intend to be a excellent translator, it is advisable for you to work much harder. For one thing, compared with other studies, translation study is more difficult since you should be good at two languages at least. For another, you are supposed to seize every opportunity to practice translation skills. It is practice that makes perfect. Practice and hard work will bring you experience, arouse your enthusiasm for learning and help you make progress every day.
+3. I am convinced that with your efforts, you will become outstanding in translation study.
 
 
 ## 2015
 
+![](../../public/img/2015a.png)
+
+1. It is great to hear that our university will hold a summer camp for high school students，and this notice is for the purpose of introducing relevant activities and calling for 20 volunteers.
+2. The camp activities mainly include visiting our campus, attending lectures by prestigious professors and taking relevant training courses. Thus, volunteers are supposed to be quite familiar with our campus, warmhearted and considerate. In addition to the above qualification, it is advisable for applications to possess certain experience and ability of organizing activities and communicating with others, which will ensure the lectures and courses to be held successfully. To conclude, we hope that it is your service that will enable the youngsters to enjoy a comfortable trip of learning at our university.
+3. This camp will start on July 10 which last for approximately a week, and there will be an interview for volunteers in the Office of the Student Union at 14:00 on June 20.
+
 
 ## 2014
+
+![](../../public/img/2014a.png)
+
+1. I am Zhang Wei, an international student from China who will study in your country and share an apartment with you. Today, I am writing to introduce myself and ask for advice.
+2. Compared with others, I maintain certain positive living habits, such as getting up and going to bed early, doing exercise regularly, listening to pop music in spare time. However, as a Chinese, I am not so familiar with the local life. Thus, it is advisable for me to ask you for advice about shopping, transportation, climate and customs there. I will be grateful if you are so kind to give me any advice.
+3. Thanks again and I am convinced that with your help, I can adapt to the life in your country soon with my arrival.
 
 
 ## 2013
 
+![](../../public/img/2013a.png)
 
 ## 2012
+
+![](../../public/img/2012a.png)
+
+1. I am a customer who purchased an electronic dictionary from your online shop several days ago, but I have found something wrong with its screen.
+2. Thus, I am writing to make a complaint. To be specific, it is its frequent break-downs that cause me to make inadequate preparation for GRE. I am rather disappointed with the quality of your product. Because this dictionary does not work at all, it is advisable for you to change it for another new one or repay me money.
+3. If you fail to provide a prompt and satisfactory solution, I will call 12315 for a further complaint.
+
+
+## 2011
+
+![](../../public/img/2011a.png)
+
+1. So delighted to the news that you have just been admitted to Peking University. Congratulations!
+2. This moment, I deem that it is advisable for you to consider how to get prepared for the upcoming university life. For one thing, you are supposed to visit the targeted website for more relevant information. For another, compared with high school, there will be more freedom and spare time in Ivory Tower. Accordingly, it is advisable for you to read extensively in the library and participate in diverse campus activities. Reading enriches your knowledge and activities bring you opportunities to show your talents.
+4. I am convinced that your future life will be fruitful and fantastic, if you make preparation based on the above suggestions.
+
+## 2010
+
+![](../../public/img/2010a.png)
+
+1. I am quite delighted to recall the past week when I studied in America as a member of cultural exchange program. Today, I am writing to express my thanks and invite you to visit China.
+2. It was your tremendous help that enables me to enjoy a comfortable and fruitful study trip in America. Thus, I want to say that I am much grateful for your warmhearted reception. Compared with America, China has a longer history and more diverse customs, distinctive architectures, foods and arts. Since you are so interested in cross-cultural exchange, it is advisable for you to visit China in due course, so that I can repay your reception.
+3. I am looking forward to your favorable reply at your earliest convenience.
