--- a/docs/tool/en/2b.md
+++ b/docs/tool/en/2b.md
@@ -1,3 +1,6 @@
+
+
+
 # 历年真题
 
 ::: tip  
@@ -15,7 +18,7 @@
 
 
 第一段  
-1. What is clearly illustrated in the pie chart is the remarkable contrast in the ways of residents' physical exercise in a certain city.
+1. What is clearly illustrated in the bar chart is the remarkable contrast in the ways of residents' physical exercise in a certain city.
 2. Specifically, the proportion of exercising alone amounts to 54.3%, ranking the highest of all the categories.
 3. Following closely is working out with friends, which figure accounts for 47.7%.
 4. Finally come doing exercise with family members and participating in team activities, at 23.9% and 15.8% respectively.
@@ -37,7 +40,7 @@
 ![](../../public/img/2020b.png)
 
 第一段
-1. Given is pie chart, clearly illustrating the remarkable contrasts in students' reading purpose on mobile phones in a certain university.
+1. What is clearly illustrated in the pie chart is the remarkable contrasts in students' reading purpose on mobile phones in a certain university.
 2. Specifically, the proportion of learning knowledge amounts to 59.5%, ranking the highest of all the categories.
 3. Following closely are killing time and searching for information, whose figures account for 21.3% and 17% respectively.
 4. Finally come other items, at 2.2%.
@@ -94,6 +97,8 @@
 
 ## 2017
 
+![](../../public/img/2017b.png)
+
 第一段  
 1. Given is a line chart, clearly illustrating the remarkable changes in the number of museums and museum visitors in China from 2013 to 2015.
 2. Specifically, in 2013, the number of museum visitors stood at 637.8 million, and it ascended dramatically, reaching the peak at 781.1 million in 2015.
@@ -108,7 +113,11 @@
 第三段  
 1. I, as a college student, am convinced that it is of great necessity for the government to support the policy of free admission.
 2. In addition, museum administrators are supposed to work out comprehensive strategies to enhance their services.
+
+
 ## 2016
+
+![](../../public/img/2016b.png)
 
 第一段
 1. What is clearly illustrated in the pie chart is the remarkable contrasts of the purpose of students' trip in a certain university.
@@ -126,6 +135,8 @@
 2. In addition, it is advisable for these young travelers to pay more attention to their safety in trips.
 
 ## 2015
+
+![](../../public/img/2015b.png)
 
 第一段
 1. What is clearly illustrated in the pie chart is the remarkable contrasts in residents' expense during Spring Festival holidays in a certain city of China.
@@ -145,6 +156,9 @@
 
 ## 2014
 
+![](../../public/img/2014b.png)
+
+
 第一段
 1. Given is a bar chart, clearly illustrating the remarkable changes in population between urban and rural areas of China from 1990 to 2010.
 2. Specifically, in 1990, the number of urban residents stood at 250 million, and it ascended dramatically, reaching the peak at 630 million in 2010.
@@ -161,6 +175,8 @@
 2. In addition, it is advisable to work out comprehensive strategies to shorten the gap between urban and rural areas.
 
 ## 2013
+
+![](../../public/img/2013b.png)
 
 第一段
 1. What is clearly illustrated in the bar chart is the remarkable contrasts in part-time jobs by college students in a certain university.
@@ -181,8 +197,7 @@
 
 ## 2012
 
-
-
+![](../../public/img/2012b.png)
 
 第一段
 1. What is clearly illustrated in the table is the remarkable contrasts in job satisfaction in a certain firm.
@@ -205,7 +220,7 @@
 
 ## 2011
 
-
+![](../../public/img/2011b.png)
 
 第一段
 1. Given is a bar chart, clearly illustrating the remarkable changes in domestic car market from 2008 to 2009.
@@ -213,7 +228,7 @@
 3. By contrast, Japanese brands demonstrated a sharp decline, which changed from 34% to 25%.
 4. Meanwhile, American brands remained stable throughout the years, levelling off at around 13%.
 
-第二段：分析原因
+第二段
 1. From my perspective, the great popularity of Chinese cars can be attributed to a host of factors, among which two essential ones are analyzed as follows.
 2. For one thing, in recent years, Chinese cars were best characterized by the lower prices and improved quality, which enabled more Chinese customers to choose their national brands.
 3. For another, compared with the past, the Sino-Japan relation got worse and a larger proportion of residents in China did not purchase Japanese products, including cars.
@@ -225,6 +240,7 @@
 
 ## 2010
 
+![](../../public/img/2010b.png)
 
 第一段
 1. Given is a bar chart, clearly illustrating the remarkable changes in mobile-phone subscriptions between developing countries and developed countries from 2000 to 2008. 
