--- a/docs/tool/en/2a.md
+++ b/docs/tool/en/2a.md
@@ -106,5 +106,5 @@
 ![](../../public/img/2010a.png)
 
 1. I am quite delighted to recall the past week when I studied in America as a member of cultural exchange program. Today, I am writing to express my thanks and invite you to visit China.
-2. It was your tremendous help that enables me to enjoy a comfortable and fruitful study trip in America. Thus, I want to say that I am much grateful for your warmhearted reception. Compared with America, China has a longer history and more diverse customs, distinctive architectures, foods and arts. Since you are so interested in cross-cultural exchange, it is advisable for you to visit China in due course, so that I can repay your reception.
+2. It was your tremendous help that enables me to enjoy a comfortable and fruitful study trip in America. Thus, I want to say that I am so grateful for your warmhearted reception. Compared with America, China has a longer history and more diverse customs, distinctive architectures, foods and arts. Since you are so interested in cross-cultural exchange, it is advisable for you to visit China in due course, so that I can repay your reception.
 3. I am looking forward to your favorable reply at your earliest convenience.
