--- a/docs/tool/en/2b.md
+++ b/docs/tool/en/2b.md
@@ -231,11 +231,11 @@
 第二段
 1. From my perspective, the great popularity of Chinese cars can be attributed to a host of factors, among which two essential ones are analyzed as follows.
 2. For one thing, in recent years, Chinese cars were best characterized by the lower prices and improved quality, which enabled more Chinese customers to choose their national brands.
-3. For another, compared with the past, the Sino-Japan relation got worse and a larger proportion of residents in China did not purchase Japanese products, including cars.
+3. For another, compared with the past, the Sino-Japan relation got worse and a host of Chinese no longer purchase Japanese products, including cars.
 
 
 第三段
-1. As a result, Chinese manufactures are supposed to pay more attention to the domestic market, due to its great potential.
+1. As a result, Chinese manufacturers are supposed to pay more attention to the domestic market, due to its great potential.
 2. In addition, it is advisable to work out comprehensive strategies to strengthen their quality and after-sales service.
 
 ## 2010
@@ -244,17 +244,17 @@
 
 第一段
 1. Given is a bar chart, clearly illustrating the remarkable changes in mobile-phone subscriptions between developing countries and developed countries from 2000 to 2008. 
-2. Specifically, in 2000, the number of developing countries stood at 400 million, and it ascended dramatically, reaching the peak at 4 billion in 2008. 
-3. By contrast, the subscription in developed countries demonstrated a slight growth throughout the years, levelling off at around 1 billion.
+2. Specifically, in 2000, the subscription in developing countries stood at 400 million, and it ascended dramatically, reaching the peak at 4 billion in 2008. 
+3. By contrast, developed countries demonstrated a slight growth throughout the years, levelling off at around 1 billion.
 
 第二段
-1. From my perspective, the rapid advance of the global mobile-phone industry can be attributed to a host of factors, among which two essential ones are analyzed as follows.
-2. For one thing, in recent years, developing countries were characterized by their economic boom, which enables residents there to possess additional money to purchase and utilize mobile-phones.
-3. For another, compared with developing countries, developed countries enjoyed a smaller market due to their smaller population. 
-4. Therefore, it displayed the trend of saturation.
+1. Such statistics can be naturally associated with the rapid advance of global mobile-phone industry, but what resulted in the changes above?
+3. For one thing, in recent years, developing countries were characterized by their economic boom, which enabled residents there to possess additional money to purchase mobile phones.
+4. For another, compared with developing countries, developed countries enjoyed a smaller market due to their smaller population. 
+5. Therefore, it displayed the trend of saturation.
 
 第三段
-1. As a result, mobile-phone manufactures are supposed to pay more attention to the market in developing nations, due to its huge potential.
+1. As a result, mobile-phone manufacturers are supposed to pay more attention to the market in developing nations, due to its huge potential.
 2. In addition, it is advisable to work out comprehensive strategies to consolidate the market in developed countries.
 
 
