--- a/docs/tool/en/2b.md
+++ b/docs/tool/en/2b.md
@@ -3,7 +3,7 @@
 
 # 历年真题
 
-::: tip  
+:::tip  
 150词，15分，通常是图表作文
 
 固定时间段，相同事物写变化
@@ -14,7 +14,7 @@
 
 ## 2021
 
-![](../../public/img/2021b.png)
+![](/img/2021b.png)
 
 
 第一段  
@@ -37,7 +37,7 @@
 
 ## 2020
 
-![](../../public/img/2020b.png)
+![](/img/2020b.png)
 
 第一段
 1. What is clearly illustrated in the pie chart is the remarkable contrasts in students' reading purpose on mobile phones in a certain university.
@@ -58,7 +58,7 @@
 
 ## 2019
 
-![](../../public/img/2019b.png)
+![](/img/2019b.png)
 
 第一段  
 1. What is clearly illustrated in the bar chart is the remarkable contrasts in graduates' career paths in a certain university from 2013 to 2018.
@@ -78,7 +78,7 @@
 
 ## 2018
 
-![](../../public/img/2018b.png)
+![](/img/2018b.png)
 
 第一段  
 1. Given is a pie chart, clearly illustrating the factors consumers pay attention to when selecting a restaurant in a certain city in 2017.  
@@ -97,7 +97,7 @@
 
 ## 2017
 
-![](../../public/img/2017b.png)
+![](/img/2017b.png)
 
 第一段  
 1. Given is a line chart, clearly illustrating the remarkable changes in the number of museums and museum visitors in China from 2013 to 2015.
@@ -117,7 +117,7 @@
 
 ## 2016
 
-![](../../public/img/2016b.png)
+![](/img/2016b.png)
 
 第一段
 1. What is clearly illustrated in the pie chart is the remarkable contrasts of the purpose of students' trip in a certain university.
@@ -127,7 +127,7 @@
 
 第二段  
 1. Such statistics can be naturally associated with the increasing popularity of traveling among students in college, but what result in the difference above?
-2. For one thing, college students are best characterized by their strong curiosity for the mysterious nature, which enables them to choose traveling as an approach to enjoy and explore the natural beaty.
+2. For one thing, college students are best characterized by their strong curiosity for the mysterious nature, which enables them to choose traveling as an approach to enjoy and explore the natural beauty.
 3. For another, compared with other tourists, youngsters in college usually suffer more burdens in academic study, so traveling is an idealistic way to release stress.
 
 第三段
@@ -136,7 +136,7 @@
 
 ## 2015
 
-![](../../public/img/2015b.png)
+![](/img/2015b.png)
 
 第一段
 1. What is clearly illustrated in the pie chart is the remarkable contrasts in residents' expense during Spring Festival holidays in a certain city of China.
@@ -156,7 +156,7 @@
 
 ## 2014
 
-![](../../public/img/2014b.png)
+![](/img/2014b.png)
 
 
 第一段
@@ -176,7 +176,7 @@
 
 ## 2013
 
-![](../../public/img/2013b.png)
+![](/img/2013b.png)
 
 第一段
 1. What is clearly illustrated in the bar chart is the remarkable contrasts in part-time jobs by college students in a certain university.
@@ -197,7 +197,7 @@
 
 ## 2012
 
-![](../../public/img/2012b.png)
+![](/img/2012b.png)
 
 第一段
 1. What is clearly illustrated in the table is the remarkable contrasts in job satisfaction in a certain firm.
@@ -220,7 +220,7 @@
 
 ## 2011
 
-![](../../public/img/2011b.png)
+![](/img/2011b.png)
 
 第一段
 1. Given is a bar chart, clearly illustrating the remarkable changes in domestic car market from 2008 to 2009.
@@ -240,7 +240,7 @@
 
 ## 2010
 
-![](../../public/img/2010b.png)
+![](/img/2010b.png)
 
 第一段
 1. Given is a bar chart, clearly illustrating the remarkable changes in mobile-phone subscriptions between developing countries and developed countries from 2000 to 2008. 
