--- a/docs/tool/en/2a.md
+++ b/docs/tool/en/2a.md
@@ -1,7 +1,7 @@
 # 历年真题
 
 
-::: tip  
+:::tip  
 100词，10分，通常是信或通知，注意通知的格式
 
 第一段一句或两句，写给熟人先寒暄后说目的，陌生人先自我介绍后说目的
@@ -14,20 +14,20 @@
 
 ## 2021
 
-![](../../public/img/2021a.png)
+![](/img/2021a.png)
 
 
 
 
 ## 2020
 
-![](../../public/img/2020a.png)
+![](/img/2020a.png)
 
 
 
 ## 2019
 
-![](../../public/img/2019a.png)
+![](/img/2019a.png)
 
 
 1. I am quite delighted to receive your invitation to plan a debate on the theme of city traffic. Today, I am writing to share my ideas about the topic and relevant arrangements.
@@ -38,7 +38,7 @@
 
 ## 2018
 
-![](../../public/img/2018a.png)
+![](/img/2018a.png)
 
 1. I am quite grateful for your invitation to talk about my paper. Anyway, I have to cancel my plan and so I am writing for the purpose of apologizing and specifying the reason.
 2. Several days ago, I did plan to go, but you know I was extremely busy during the past six months because I focused all my eyesight on the preparation for the national entrance examination for postgraduates. Unfortunately, due to my carelessness, I did not notice that the date for the test is just the day I planned to visit you until this moment. Accordingly, I have no option but cancel the plan.
@@ -49,13 +49,13 @@
 
 ## 2017
 
-![](../../public/img/2017a.png)
+![](/img/2017a.png)
 
 
 
 ## 2016
 
-![](../../public/img/2016a.png)
+![](/img/2016a.png)
 
 1. So delighted to receive your congratulations and thank you very much. Today, I am writing to share my experience in learning translation.
 2. Provided that you intend to be a excellent translator, it is advisable for you to work much harder. For one thing, compared with other studies, translation study is more difficult since you should be good at two languages at least. For another, you are supposed to seize every opportunity to practice translation skills. It is practice that makes perfect. Practice and hard work will bring you experience, arouse your enthusiasm for learning and help you make progress every day.
@@ -64,7 +64,7 @@
 
 ## 2015
 
-![](../../public/img/2015a.png)
+![](/img/2015a.png)
 
 1. It is great to hear that our university will hold a summer camp for high school students，and this notice is for the purpose of introducing relevant activities and calling for 20 volunteers.
 2. The camp activities mainly include visiting our campus, attending lectures by prestigious professors and taking relevant training courses. Thus, volunteers are supposed to be quite familiar with our campus, warmhearted and considerate. In addition to the above qualification, it is advisable for applications to possess certain experience and ability of organizing activities and communicating with others, which will ensure the lectures and courses to be held successfully. To conclude, we hope that it is your service that will enable the youngsters to enjoy a comfortable trip of learning at our university.
@@ -73,7 +73,7 @@
 
 ## 2014
 
-![](../../public/img/2014a.png)
+![](/img/2014a.png)
 
 1. I am Zhang Wei, an international student from China who will study in your country and share an apartment with you. Today, I am writing to introduce myself and ask for advice.
 2. Compared with others, I maintain certain positive living habits, such as getting up and going to bed early, doing exercise regularly, listening to pop music in spare time. However, as a Chinese, I am not so familiar with the local life. Thus, it is advisable for me to ask you for advice about shopping, transportation, climate and customs there. I will be grateful if you are so kind to give me any advice.
@@ -82,11 +82,11 @@
 
 ## 2013
 
-![](../../public/img/2013a.png)
+![](/img/2013a.png)
 
 ## 2012
 
-![](../../public/img/2012a.png)
+![](/img/2012a.png)
 
 1. I am a customer who purchased an electronic dictionary from your online shop several days ago, but I have found something wrong with its screen.
 2. Thus, I am writing to make a complaint. To be specific, it is its frequent break-downs that cause me to make inadequate preparation for GRE. I am rather disappointed with the quality of your product. Because this dictionary does not work at all, it is advisable for you to change it for another new one or repay me money.
@@ -95,7 +95,7 @@
 
 ## 2011
 
-![](../../public/img/2011a.png)
+![](/img/2011a.png)
 
 1. So delighted to the news that you have just been admitted to Peking University. Congratulations!
 2. This moment, I deem that it is advisable for you to consider how to get prepared for the upcoming university life. For one thing, you are supposed to visit the targeted website for more relevant information. For another, compared with high school, there will be more freedom and spare time in Ivory Tower. Accordingly, it is advisable for you to read extensively in the library and participate in diverse campus activities. Reading enriches your knowledge and activities bring you opportunities to show your talents.
@@ -103,7 +103,7 @@
 
 ## 2010
 
-![](../../public/img/2010a.png)
+![](/img/2010a.png)
 
 1. I am quite delighted to recall the past week when I studied in America as a member of cultural exchange program. Today, I am writing to express my thanks and invite you to visit China.
 2. It was your tremendous help that enables me to enjoy a comfortable and fruitful study trip in America. Thus, I want to say that I am so grateful for your warmhearted reception. Compared with America, China has a longer history and more diverse customs, distinctive architectures, foods and arts. Since you are so interested in cross-cultural exchange, it is advisable for you to visit China in due course, so that I can repay your reception.
