--- a/docs/en/2b.md
+++ b/docs/en/2b.md
@@ -1,7 +1,5 @@
 
-
-
-# 历年真题
+# 英二历年真题
 
 :::tip  
 150词，15分，通常是图表作文
@@ -11,6 +9,9 @@
 不同时间段，不同事物写对比或排序  
 :::
 
+## 2022
+
+![](/img/2022b.png)
 
 ## 2021
 
