--- a/docs/en/2a.md
+++ b/docs/en/2a.md
@@ -102,8 +102,8 @@
 
 ![](/img/2011a.png)
 
-1. So delighted to the news that you have just been admitted to Peking University. Congratulations!
-2. This moment, I deem that it is advisable for you to consider how to get prepared for the upcoming university life. For one thing, you are supposed to visit the targeted website for more relevant information. For another, compared with high school, there will be more freedom and spare time in Ivory Tower. Accordingly, it is advisable for you to read extensively in the library and participate in diverse campus activities. Reading enriches your knowledge and activities bring you opportunities to show your talents.
+1. So delighted to receive the news that you have just been admitted to Peking University. Congratulations!
+2. This moment, I deem that it is advisable for you to consider how to get prepared for the upcoming university life. For one thing, you are supposed to visit the targeted website for more relevant information. For another, compared with high school, there will be more freedom and spare time in Ivory Tower. Accordingly, it is essential for you to read extensively in the library and participate in diverse campus activities. Reading enriches your knowledge and activities bring you opportunities to show your talents.
 4. I am convinced that your future life will be fruitful and fantastic, if you make preparation based on the above suggestions.
 
 ## 2010
