--- a/docs/en/2b.md
+++ b/docs/en/2b.md
@@ -161,7 +161,7 @@
 
 
 第一段
-1. Given is a bar chart, clearly illustrating the remarkable changes in population between urban and rural areas of China from 1990 to 2010.
+1. What is clearly illustrated in the column chart is the remarkable changes in population between urban and rural areas of China from 1990 to 2010.
 2. Specifically, in 1990, the number of urban residents stood at 250 million, and it ascended dramatically, reaching the peak at 630 million in 2010.
 3. By contrast, the rural population demonstrated a reverse trend, which changed from 820 million to 640 million.
 
@@ -169,7 +169,6 @@
 1. From my perspective, the rapid urbanization in China can be attributed to a host of factors, among which two essential ones are analyzed as follows.
 2. For one thing, in recent years, China was best characterized by its economic boom and its policy in controlling population, which enabled more families in the countryside to have only one kid and some rich families move to cities.
 3. For another, compared with the rural areas, cities enjoy superior education sources, medical care, employment and other public services.
-4. Therefore, cities attract more people to reside, especially college graduates.
 
 第三段
 1. As a result, the government are supposed to pay more attention to the problems caused by population expansion in cities.
@@ -192,8 +191,8 @@
 3. For another, compared with students in lower grades, senior possess richer professional knowledge, greater demand of working experience and less courses, so constituting a large percentage.
 
 第三段  
-1. As a result, university authorities are supposed to provide certain support and guidance for students on how to find and do part-time job well.
-2. In addition, it is advisable for students to work out comprehensive strategies to balance their academic pursuit and spare-time work.
+1. Accordingly, university authorities are supposed to provide certain support and guidance for students on how to find and do part-time job well.
+2. In addition, it is advisable for students to work out comprehensive strategies to achieve work-study balance.
 
 
 ## 2012
@@ -209,7 +208,7 @@
 
 第二段  
 1. What result in the sharp differences above? 
-2. For one thing, the life of staff in their 40s is best characterized by their greater work pressure, greater expectation for promotion and greater financial burden.
+2. For one thing, the life of staff aged between 41 to 50 is best characterized by their greater work pressure, greater expectation for promotion and greater financial burden.
 3. These factors can hardly enable them to be satisfied with their status quo.
 4. For another, compared with younger generations, the experience of staff over 50 is richer and their salary is higher.
 5. Therefore, a larger proportion of this category show a trend of satisfaction.
@@ -224,19 +223,19 @@
 ![](/img/2011b.png)
 
 第一段
-1. Given is a bar chart, clearly illustrating the remarkable changes in domestic car market from 2008 to 2009.
+1. What is clearly illustrated in the column chart is the remarkable changes in domestic car market from 2008 to 2009.
 2. Specifically, in 2008, the share of Chinese brands stood at 26%, and it ascended dramatically, reaching the peak at 33% in 2009.
 3. By contrast, Japanese brands demonstrated a sharp decline, which changed from 34% to 25%.
-4. Meanwhile, American brands remained stable throughout the years, levelling off at around 13%.
+4. Meanwhile, American counterparts remained stable throughout the years.
 
 第二段
-1. From my perspective, the great popularity of Chinese cars can be attributed to a host of factors, among which two essential ones are analyzed as follows.
+1. What resulted in the differences above?
 2. For one thing, in recent years, Chinese cars were best characterized by the lower prices and improved quality, which enabled more Chinese customers to choose their national brands.
 3. For another, compared with the past, the Sino-Japan relation got worse and a host of Chinese no longer purchase Japanese products, including cars.
 
 
 第三段
-1. As a result, Chinese manufacturers are supposed to pay more attention to the domestic market, due to its great potential.
+1. Accordingly, Chinese manufacturers are supposed to pay more attention to the domestic market, due to its great potential.
 2. In addition, it is advisable to work out comprehensive strategies to strengthen their quality and after-sales service.
 
 ## 2010
