--- a/docs/en/2b.md
+++ b/docs/en/2b.md
@@ -208,10 +208,10 @@
 
 第二段  
 1. What result in the sharp differences above? 
-2. For one thing, the life of staff aged between 41 to 50 is best characterized by their greater work pressure, greater expectation for promotion and greater financial burden.
+2. For one thing, the life of staff aged between 41 and 50 is best characterized by their greater work pressure, greater expectation for promotion and greater financial burden.
 3. These factors can hardly enable them to be satisfied with their status quo.
 4. For another, compared with younger generations, the experience of staff over 50 is richer and their salary is higher.
-5. Therefore, a larger proportion of this category show a trend of satisfaction.
+5. Therefore, a larger proportion of this category showed a trend of satisfaction.
 
 第三段
 1. As a result, this corporation are supposed to pay more attention to the demand of middle-aged workers.
