--- a/docs/en/2b.md
+++ b/docs/en/2b.md
@@ -11,11 +11,11 @@
 
 ## 2022
 
-![](/img/2022b.png)
+![](/img/en/2022b.png)
 
 ## 2021
 
-![](/img/2021b.png)
+![](/img/en/2021b.png)
 
 
 第一段  
@@ -38,7 +38,7 @@
 
 ## 2020
 
-![](/img/2020b.png)
+![](/img/en/2020b.png)
 
 第一段
 1. What is clearly illustrated in the pie chart is the remarkable contrasts in students' reading purpose on mobile phones in a certain university.
@@ -59,7 +59,7 @@
 
 ## 2019
 
-![](/img/2019b.png)
+![](/img/en/2019b.png)
 
 第一段  
 1. What is clearly illustrated in the bar chart is the remarkable contrasts in graduates' career paths in a certain university from 2013 to 2018.
@@ -79,7 +79,7 @@
 
 ## 2018
 
-![](/img/2018b.png)
+![](/img/en/2018b.png)
 
 第一段  
 1. Given is a pie chart, clearly illustrating the factors consumers pay attention to when selecting a restaurant in a certain city in 2017.  
@@ -98,7 +98,7 @@
 
 ## 2017
 
-![](/img/2017b.png)
+![](/img/en/2017b.png)
 
 第一段  
 1. Given is a line chart, clearly illustrating the remarkable changes in the number of museums and museum visitors in China from 2013 to 2015.
@@ -118,7 +118,7 @@
 
 ## 2016
 
-![](/img/2016b.png)
+![](/img/en/2016b.png)
 
 第一段
 1. What is clearly illustrated in the pie chart is the remarkable contrasts of the purpose of students' trip in a certain university.
@@ -137,7 +137,7 @@
 
 ## 2015
 
-![](/img/2015b.png)
+![](/img/en/2015b.png)
 
 第一段
 1. What is clearly illustrated in the pie chart is the remarkable contrasts in residents' expense during Spring Festival holidays in a certain city of China.
@@ -157,7 +157,7 @@
 
 ## 2014
 
-![](/img/2014b.png)
+![](/img/en/2014b.png)
 
 
 第一段
@@ -176,7 +176,7 @@
 
 ## 2013
 
-![](/img/2013b.png)
+![](/img/en/2013b.png)
 
 第一段
 1. What is clearly illustrated in the bar chart is the remarkable contrasts in part-time jobs by college students in a certain university.
@@ -197,7 +197,7 @@
 
 ## 2012
 
-![](/img/2012b.png)
+![](/img/en/2012b.png)
 
 第一段
 1. What is clearly illustrated in the table is the remarkable contrasts in job satisfaction in a certain firm.
@@ -220,7 +220,7 @@
 
 ## 2011
 
-![](/img/2011b.png)
+![](/img/en/2011b.png)
 
 第一段
 1. What is clearly illustrated in the column chart is the remarkable changes in domestic car market from 2008 to 2009.
@@ -240,7 +240,7 @@
 
 ## 2010
 
-![](/img/2010b.png)
+![](/img/en/2010b.png)
 
 第一段
 1. Given is a bar chart, clearly illustrating the remarkable changes in mobile-phone subscriptions between developing countries and developed countries from 2000 to 2008. 
