--- a/docs/en/2a.md
+++ b/docs/en/2a.md
@@ -21,6 +21,8 @@
 
 ![](/img/en/2021a.png)
 
+1. On behalf of the Student Union, it's my pleasure to invite to a online meeting aimed at popularizing the knowledge about epidemic prevention and control.
+2. The meeting will be held on the school website from 10:00 to 12:00 a.m. on December 20th. All international students will be 
 
 
 
