--- a/docs/en/2a.md
+++ b/docs/en/2a.md
@@ -21,9 +21,9 @@
 
 ![](/img/en/2021a.png)
 
-1. On behalf of the Student Union, it's my pleasure to invite to a online meeting aimed at popularizing the knowledge about epidemic prevention and control.
-2. The meeting will be held on the school website from 10:00 to 12:00 a.m. on December 20th. All international students will be 
-
+1. On behalf of the Student Union, it's my great pleasure to invite you to attend the online meeting aimed at popularizing the knowledge about epidemic prevention and control.
+2. The meeting will be held on the official website of our school from 10:00 to 12:00 a.m. on December 20th. All international students will be present, hence I hope you will be there in any case. In addition, I will be grateful if you can share your feelings about global efforts to prevent and control the epidemic at this meeting.
+3. Please feel free to contact me if you have any questions about this meeting. Look Forward to your active participation.
 
 
 ## 2020
