--- a/docs/en/2a.md
+++ b/docs/en/2a.md
@@ -37,8 +37,8 @@
 ![](/img/en/2019a.png)
 
 
-1. I am quite delighted to receive your invitation to plan a debate on the theme of city traffic. Today, I am writing to share my ideas about the topic and relevant arrangements.
-2. I deem that it is advisable to choose this topic: Private Cars -- to Encourage or to Limited? For one thing, in recent years, cities in China have been featured by the rapid economic development, which enabled more families to have additional money to purchase cars. For another, cars bring us great convenience and help us to enjoy more comfortable. However, it is also cars that cause the roads to be congested.
+1. I am quite delighted to receive your invitation to plan a debate on the theme of city traffic. I am writing to share my ideas about the topic and relevant arrangements.
+2. I deem that it is advisable to choose this topic: Private Cars -- to Encourage or to Limited? For one thing, in recent years, cities in China were characterized by the rapid economic development, which enabled more families to have additional money to purchase cars. For another, cars bring us great convenience and help us to enjoy more comfort. However, it is also cars that cause the roads to be congested.
 3. I suggest that this debate should be held in the Center of Student Activities from 18:00 to 20:00 on December 12, if you have any better suggestion, please feel free to inform me.
 
 
