--- a/docs/en/2b.md
+++ b/docs/en/2b.md
@@ -62,9 +62,8 @@
 ![](/img/en/2019b.png)
 
 第一段  
-1. What is clearly illustrated in the bar chart is the remarkable contrasts in graduates' career paths in a certain university from 2013 to 2018.
-2. Specifically, the proportion of those who hunted for jobs demonstrated a sharp decline, which changed from 68.1% to 60.7%.
-3. By contrast, the percentage of those who chose to further their study showed a dramatic growth, from 26.3% to 34%.
+1. What is clearly illustrated in the bar chart is the remarkable contrasts in graduates' career paths in a certain university in 2013 and 2018.
+2. Specifically, the proportion of graduates who got employed decreased from 68.1% to 60.7%, while the percentage of those who chose to further their study showed a dramatic growth, from 26.3% to 34%.
 4. Meanwhile, the percentage of graduates who started their own business ascended from 1.3% to 2.6%.
 
 第二段  
